WIP: Docker setup.

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -14,10 +14,5 @@ RUN go get -t
 RUN go get github.com/onsi/ginkgo
 RUN go get github.com/onsi/gomega
 RUN go get github.com/mattes/migrate
-#RUN psql -c "CREATE USER $POSTGRES_ENV_POSTGRES_USER WITH PASSWORD '$POSTGRES_ENV_POSTGRES_PASSWORD';"
-#RUN echo "CREATE EXTENSION IF NOT EXISTS pgcrypto" | psql -d postgres
-#RUN migrate -url $DATABASE_CONFIG -path ./store/migrations up
 
-EXPOSE 8080
-
-CMD ["go", "run", "./main.go"]
+CMD ["go", "test", "./...", "-cover", "-v"]
