Working on docker builds.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,9 @@
-store:
-  image: postgres:latest
-  volumes:
-    - /var/lib/postgresql/data
-  command: "true"
-
-postgres:
-  build: .
-  dockerfile: Dockerfile.postgres
-  ports:
-    - "5432"
-  volumes_from:
-    - store
-  environment:
-    - POSTGRES_USER=root
-    - POSTGRES_PASSWORD=pa55word
-
-api:
+web:
   build: .
   dockerfile: Dockerfile
   links:
     - postgres
   ports:
-    - "8080:8080"
+    - "80:80"
+postgres:
+  image: postgres
