--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,12 @@ web:
   links:
     - postgres
   ports:
-    - "80:80"
+    - "8080:8080"
 postgres:
-  image: postgres
+  image: postgres:latest
+  ports:
+    - "15432:5432"
+  environment:
+    - POSTGRES_USER=postgres
+    - POSTGRES_PASSWORD=
+    - POSTGRES_DB=postgres
